更新inspircd配置，修正自动连接服务器地址和版本信息以提升配置准确性

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -203,7 +203,7 @@
 
 #-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
 <autoconnect period="2m"
-             server="irc1.exp.cn">
+             server="">
 <link allowmask="0.0.0.0"
       bind="0.0.0.0"
       name="irc1.exp.org"
