--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -1,4 +1,4 @@
-# Inspircd conf ---UTF-8 ---ARKFUTUREconf[ssl1.5] ---server[4.6.0]
+# Inspircd conf ---UTF-8 ---ARKFUTUREconf[1.5] ---server[4.6.0]
 # 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 # !!!!此配置文件中所有的密码均为随机生成,不作为固定密码使用,请注意修改密码,才能使用到生产环境中
@@ -45,10 +45,10 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
-<bind address="0.0.0.0"
+<bind address="*"
       port="6667,6668,6669"
       type="clients">
-<bind address="0.0.0.0"
+<bind address="*"
       port="7000"
       type="servers">
 
@@ -166,7 +166,7 @@
 #-#-#-#-#-#-#-#-#-#-#-#安全配置#-#-#-#-#-#-#-#-#-#-#-#
 #<security>标签定义了与服务器安全相关的配置选项.此标记只能定义一次.
 <security announceinvites="dynamic"
-          customversion="ARKFUTURE"
+          customversion="ARKFUTUREconf[1.5]"
           genericoper="no"
           publicxlinequit=""
           hidekills=""
