更新inspircd配置，修改chanlog频道名称和snomasks以提升日志记录准确性

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -22,8 +22,8 @@
              maxduration="4w"
              maxlines="50"
              prefixmsg="yes">
-<chanlog channel="#chanlog"
-         snomasks="cq">
+<chanlog channel="#arkfuture"
+         snomasks="cqjknorvwx">
 <channames allowrange=""
            denyrange="">
 <codepage name="ascii"
