更新inspircd配置，修改chanlog频道名称为#arkfuture_op，更新配置文件注释以提升清晰度和准确性

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -22,7 +22,7 @@
              maxduration="4w"
              maxlines="50"
              prefixmsg="yes">
-<chanlog channel="#arkfuture"
+<chanlog channel="#arkfuture_op"
          snomasks="cqjknorvwx">
 <channames allowrange=""
            denyrange="">
