--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -1,5 +1,5 @@
-# Inspircd conf ---UTF-8 ---ARKFUTUREconf[1.5] ---server[4.6.0]
-# 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
+# Inspircd conf ---UTF-8 ---server[4.6.0]
+# 这只是一个基础的配置文件 它可能需要根据您的需求进行调整 此文件为公开的配置文件 请按需要修改为自己的
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 # !!!!此配置文件中所有的密码均为随机生成,不作为固定密码使用,请注意修改密码,才能使用到生产环境中
 # !!!!预编译模块需要[自行编译安装]或者[使用我们已编译好的全模块软件包]后才可以使用,否则将会报错,这也是我们注释掉第三方模块的原因
@@ -166,7 +166,7 @@
 #-#-#-#-#-#-#-#-#-#-#-#安全配置#-#-#-#-#-#-#-#-#-#-#-#
 #<security>标签定义了与服务器安全相关的配置选项.此标记只能定义一次.
 <security announceinvites="dynamic"
-          customversion="ARKFUTUREconf[1.5]"
+          customversion="PublicConfig[1.5]"
           genericoper="no"
           publicxlinequit=""
           hidekills=""
@@ -259,7 +259,7 @@
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-#模块#-#-#-#-#-#-#-#-#-#-#-#
-# 请阅读https://docs.inspircd.org/4/modules/
+# 请阅读 https://docs.inspircd.org/4/modules/ 并根据您的需求加载模块
 
 ######Default Modules
 <module name="abbreviation">
