更新帮助命令，修正命令前缀并调整虚假频道配置以增强功能

--- a/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/helpop.conf
@@ -11,13 +11,13 @@
 
 例如:/HELPOP <参数>
 以下为可用的:
-/HELPOP CUSER    -      查看[用户]命令列表
-/HELPOP COPER    -      查看[管理员]命令列表
-/HELPOP UMODES   -      查看[用户]模式列表
-/HELPOP CHMODES  -      查看[频道]模式列表
-/HELPOP SNOMASKS -      查看[管理员]通知掩码列表
-/HELPOP EXTBANS  -      查看[封禁]类型列表
-/HELPOP INDEX    -      查看帮助主题索引
+/HELP CUSER    -      查看[用户]命令列表
+/HELP COPER    -      查看[管理员]命令列表
+/HELP UMODES   -      查看[用户]模式列表
+/HELP CHMODES  -      查看[频道]模式列表
+/HELP SNOMASKS -      查看[管理员]通知掩码列表
+/HELP EXTBANS  -      查看[封禁]类型列表
+/HELP INDEX    -      查看帮助主题索引
 
 /HELPOP mode    -      模式设置和查看
 /HELPOP stats   -      统计信息
