--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -147,9 +147,9 @@
             showmsg="yes"
             waittime="60s"
             hidesmallchans="2"
-            fakechans="5"
+            fakechans="10"
             fakechanprefix="#"
-            fakechantopic="虚假渠道混淆垃圾邮件机器人">
+            fakechantopic="混淆垃圾邮件机器人的虚假渠道 {RANDOM}">
 <servicesintegration accountoverrideshold="yes"
                      disablemodes="no">
 <hostname charmap="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz.-_/0123456789">
