更新inspircd.conf配置，设置globalmax为3，启用uniqueusername和usecloak，禁用useconnectban

--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -56,7 +56,7 @@
          allow="*"
          commandrate="1000"
          fakelag="yes"
-         globalmax=""
+         globalmax="3"
          hardsendq="1M"
          limit=""
          localmax=""
@@ -68,9 +68,11 @@
          softsendq="8192"
          threshold="10"
          timeout="10"
-         uniqueusername="no"
+         uniqueusername="yes"
          password=""
          hash=""
+         usecloak="yes"
+         useconnectban="no"
          motd="motd"
          modes="">   
 
