更新inspircd.conf配置，修改安全设置中的customversion，优化离线消息提示，并调整隐藏服务器名称

--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -165,11 +165,11 @@
 #-#-#-#-#-#-#-#-#-#-#-#安全配置#-#-#-#-#-#-#-#-#-#-#-#
 #<security>标签定义了与服务器安全相关的配置选项.此标记只能定义一次.
 <security announceinvites="dynamic"
-          customversion="PublicConfig[1.5]"
+          customversion="Public Config"
           genericoper="no"
-          publicxlinequit=""
-          hidekills=""
-          hideserver="ARKFUTURE"
+          publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 设置者为 %setter%, 虽无法告知具体原因, 但请知悉系统依规执行. "
+          hidekills="您已经被KILL, 请联系管理员"
+          hideserver="ARKFUTURE-NET"
           hideservicekills="yes"
           maxtargets="20"
           restrictbannedusers="yes"
@@ -244,7 +244,7 @@
 #<badhost>标签定义了永久K线.此标记可以根据需要定义多次.
 <badhost host="*.example.com" reason="为防止攻击保留">
 
-#<maxlist>标签的定义数量的清单模式，可以建立在一个通道
+#<maxlist>标签的定义数量的清单模式, 可以建立在一个通道
 <maxlist chan="*"
          limit="100000">
 
