--- a/ARKFUTURE/CONFIG/inspircd/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/inspircd.conf
@@ -341,7 +341,7 @@
 <module name="ircv3_labeledresponse">
 <module name="ircv3_msgid">
 <module name="ircv3_servertime">
-#<module name="ircv3_sts">
+<module name="ircv3_sts">
 <module name="joinflood">
 <module name="kicknorejoin">
 <module name="knock">
