更新modulesconf.conf配置，添加STS设置以支持安全连接

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -199,6 +199,10 @@
             tlsv11="no"
             tlsv12="yes"
             tlsv13="yes">
+<sts host="*"
+     duration="60d"
+     port="6697"
+     preload="yes">
 
 
 #-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
