更新了一些东西

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -181,7 +181,7 @@
 <maxmind file="&ConfPath;CC.mmdb">
 
 # 配置SSL(如果让此项生效,需要自行编译和启用OPENSSL模块,如果是官方安装包,此配置不生效)
-
+# 请自行参考官方配置后补充配置
 <openssl onrehash="yes">
 <sslprofile name="Clients"
             provider="openssl"
@@ -206,14 +206,4 @@
 
 
 #-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
-<autoconnect period="2m"
-             server="">
-<link allowmask="0.0.0.0"
-      bind="0.0.0.0"
-      name="irc1.exp.org"
-      ipaddr="IP"
-      port="7000"
-      hidden="no"
-      recvpass="3SQrJvhutfsKBVw4rbxt"
-      sendpass="3SQrJvhutfsKBVw4rbxt"
-      timeout="15s">
+# 请自行参考官方配置后补充配置
