更新配置文件，调整pbkdf2参数以增强密码安全性，并修改MOTD以提供更清晰的密码生成说明

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -118,8 +118,11 @@
              forwardmsg="通知 %nick% :*** 将PASS转发到 %nickrequired%"
              nick="NickServ">
 <mkpasswd operonly="no">
-<pbkdf2 iterations="12288"
-        length="32">
+<pbkdf2 iterations="20480"
+        length="64">
+<pbkdf2prov hash="sha512"
+            iterations="20480"
+            length="64"> 
 <permchanneldb filename="&ConfPath;permchannels.conf"
                listmodes="yes"
                operonly="yes"
