修正MOTD中的管理员联系指令，将"ARKFUTURE"改为"arkfuture"以保持一致性

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -183,30 +183,12 @@
 #-#-#-#-#-#-#-#-#-#额外的模块配置-#-#-#-#-#-#-#-#
 <maxmind file="&ConfPath;CC.mmdb">
 
-# 配置SSL(如果让此项生效,需要自行编译和启用OPENSSL模块,如果是官方安装包,此配置不生效)
-# 请自行参考官方配置后补充配置
-<openssl onrehash="yes">
-<sslprofile name="Clients"
-            provider="openssl"
-            cafile="&ConfPath;ssl/ca.pem"
-            certfile="&ConfPath;ssl/cert.pem"
-            crlfile=""
-            ciphers="DEFAULT"
-            compression="no"
-            dhfile="&ConfPath;ssl/dhparams.pem"
-            ecdhcurve="prime256v1"
-            hash="sha3-256"
-            keyfile="&ConfPath;ssl/key.pem"
-            renegotiation="no"
-            requestclientcert="yes"
-            tlsv11="no"
-            tlsv12="yes"
-            tlsv13="yes">
-<sts host="*"
-     duration="60d"
-     port="6697"
-     preload="yes">
+# 配置SSL(如果让此项生效,需要自行编译和启用SSL模块,如果是安装了官方的安装包,此配置不生效)
+# 请自行参考官方配置后补充配置 对应模块:ssl_openssl 或 ssl_gnutls
 
 
 #-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
-# 请自行参考官方配置后补充配置
+# 请自行参考官方配置后补充配置 对应模块:spanningtree
+
+#-#-#-#-#-#-#-#-#-#数据库-#-#-#-#-#-#-#-#
+# 请自行参考官方配置后补充配置 对应模块:sqlite3 或 mysql 或 pgsql
