Update configuration scripts and files for ARKFUTURE
- Modified config.sh to clarify usage for the latest ARKFUTURE nossl configuration.
- Updated publicxlinequit message in inspircd.conf for better clarity on appeal process.
- Enhanced install.sh to prompt for noroot configuration download option.
- Removed outdated noroot inspircd.conf file and replaced it with a new version.
- Added new noroot configuration files and scripts to streamline setup process.

--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -164,7 +164,7 @@
 <security announceinvites="dynamic"
           customversion="Public Config"
           genericoper="no"
-          publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 设置者为 %setter%, 虽无法告知具体原因, 但请知悉系统依规执行. "
+          publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 请联系 arkfuture 对此决定进行上诉."
           hidekills="您已经被KILL, 请联系管理员"
           hideserver="ARKFUTURE-NET"
           hideservicekills="yes"
