--- a/ARKFUTURE/CONFIG/inspircd/norootconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/norootconf/inspircd.conf
@@ -12,13 +12,13 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
 # <path> 标记定义了服务器的目录结构.此标记只能定义一次.
-<path configdir="./;">
+<path configdir="./">
 
 # <define> 标记允许您定义一个实体(定义服务器变量);使用方法:&SSLPath;ca.crt 代替 /etc/inspircd/ssl/ca.crt
 <define name="ConfPath"
-        value="./conf/">
+        value="conf/">
 <define name="TxtPath"
-        value="./txt/">
+        value="txt/">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
