更新配置文件，优化连接和安全设置，添加管理频道限制及SSL信息配置

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -1,8 +1,7 @@
 # Inspircd conf ---UTF-8
-# 这只是一个基础的配置文件 它可能需要根据您的需求进行调整 此文件为公开的配置文件 请按需要修改为自己的
+# 这只是一个基础的配置文件 它可能需要根据您的需求进行调整 此文件为公开的配置文件
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
-# !!!!此配置文件中所有的密码均为随机生成,不作为固定密码使用,请注意修改密码,才能使用到生产环境中
-# !!!!预编译模块需要[自行编译安装]或者[使用我们已编译好的全模块软件包]后才可以使用,否则将会报错,这也是我们注释掉第三方模块的原因
+# !!!!此配置文件非常激进 非常格式化 请按需修改!!!!
 
 # 您可以在以下文档中查询详细配置来完善此配置,我们的配置基于官方文档
 # 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
@@ -41,15 +40,20 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
-<bind address="*"
-      port="6667,6668,6669"
+<bind port="6667,6668,6669"
+      type="clients">
+<bind port="6697"
+      sslprofile="Clients"
+      type="clients">
+<bind port="8080"
+      hook="websocket"
+      sslprofile="Websockets"
       type="clients">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标记可以根据需要定义多次.
 <connect name="Main"
-         allow="*"
          commandrate="1000"
          fakelag="yes"
          globalmax="3"
@@ -66,11 +70,27 @@
          timeout="10"
          uniqueusername="yes"
          password=""
-         hash=""
+         hash="pbkdf2-hmac-sha512"
          usecloak="yes"
          useconnectban="no"
-         motd="motd"
-         modes="">  
+         motd="motd">  
+
+<connect name="Basic"
+         parent="Main"
+         allow="*"
+         usecloak="yes"
+         useconnectban="no"
+         port="6667,6668,6669"
+         modes="">
+
+<connect name="Secure"
+         parent="Main"
+         allow="*"
+         usecloak="yes"
+         useconnectban="no"
+         port="6697"
+         requiressl="trusted"
+         usests="yes">
 
 #标记定义定位克隆时应查看的IP地址位数.此标记只能定义一次.
 <cidr ipv4clone="32"
@@ -114,7 +134,7 @@
 
 #<oper>标签定义了一个服务器操作员帐户.此标记可以根据需要定义多次.
 # 使用include来加载一个单独的操作员账户配置文件
-#<include file="&ConfPath;opers.conf"> //将使用数据库存储操作员信息
+#<include file="&ConfPath;opers.conf"> //此配置使用数据库存储操作员信息
 
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
@@ -193,7 +213,7 @@
 #<whowas>标签定义了/WHOWAS数据库的配置.此标记只能定义一次.
 <whowas groupsize="10"
         maxgroups="10000"
-        maxkeep="3d"
+        maxkeep="7d"
         nickupdate="yes">
 
 
@@ -422,7 +442,7 @@
 <module name="uninvite">
 <module name="vhost">
 <module name="watch">
-#<module name="websocket">
+<module name="websocket">
 <module name="xline_db">
 
 ######Extra Modules
