--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -178,8 +178,15 @@
          saveperiod="5s"
          backoff="2"
          maxbackoff="5m">
-
-
+<badchan name="#arkfuture*"
+         reason="管理专有频道,请勿使用!"
+         allowopers="no">
+<sslinfo hash="sha-256"
+         localsecure="no"
+         operonly="yes"
+         warnexpiring="1w"
+         welcomemsg="no">
+<wsorigin allow="*">
 
 #-#-#-#-#-#-#-#-#-#额外的模块配置-#-#-#-#-#-#-#-#
 <maxmind file="&ConfPath;CC.mmdb">
@@ -200,10 +207,19 @@
             priority="NORMAL"
             requestclientcert="yes"
             strictpriority="no">
-<bind address="*"
-      port="6697"
-      sslprofile="Clients"
-      type="clients">
+<sslprofile name="Websockets"
+            provider="gnutls"
+            cafile=""
+            certfile="&dir.config;/conf/fullchain.pem"
+            crlfile=""
+            dhfile=""
+            hash="sha3-256"
+            keyfile="&dir.config;/conf/key.pem"
+            mindhbits="1024"
+            outrecsize="2048"
+            priority="NORMAL"
+            requestclientcert="yes"
+            strictpriority="no">
 <sts host="*"
      duration="60d"
      port="6697"
