优化配置文件，简化连接设置，更新密码哈希算法，添加基本连接配置

--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -49,7 +49,6 @@
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<connect>标签定义了一个类,当用户连接到服务器时,可以将用户过滤到这个类中.此标记可以根据需要定义多次.
 <connect name="Main"
-         allow="*"
          commandrate="1000"
          fakelag="yes"
          globalmax="3"
@@ -66,11 +65,17 @@
          timeout="10"
          uniqueusername="yes"
          password=""
-         hash=""
+         hash="pbkdf2-hmac-sha512"
          usecloak="yes"
          useconnectban="no"
-         motd="motd"
-         modes="">   
+         motd="motd">  
+
+<connect name="Basic"
+         parent="Main"
+         allow="*"
+         usecloak="yes"
+         useconnectban="no"
+         port="6667,6668,6669">
 
 #标记定义定位克隆时应查看的IP地址位数.此标记只能定义一次.
 <cidr ipv4clone="32"
