--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -1,7 +1,6 @@
 # Inspircd conf ---UTF-8
 # 这只是一个基础的配置文件 它可能需要根据您的需求进行调整 此文件为公开的配置文件
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
-# !!!!此配置文件非常激进 非常格式化 请按需修改!!!!
 
 # 您可以在以下文档中查询详细配置来完善此配置,我们的配置基于官方文档
 # 请参阅中的示例(更具体的) /usr/share/doc/inspircd/examples/
@@ -16,11 +15,11 @@
       logdir="&dir.log;"
       moduledir="&dir.module;"
       runtimedir="&dir.runtime;">
-# <define> 标记允许您定义一个实体(定义服务器变量);使用方法:&SSLPath;ca.crt 代替 /etc/inspircd/ssl/ca.crt
+# <define> 标记允许您定义一个实体(定义服务器变量).此标记可以根据需要定义多次.
 <define name="ConfPath"
-        value="&dir.config;/conf/">
+        value="conf/">
 <define name="TxtPath"
-        value="&dir.config;/txt/">
+        value="txt/">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -80,8 +79,7 @@
          allow="*"
          usecloak="yes"
          useconnectban="no"
-         port="6667,6668,6669"
-         modes="">
+         port="6667,6668,6669">
 
 <connect name="Secure"
          parent="Main"
