更新README.md和配置文件，添加websocket和httpd端口配置，优化SSL配置，修正模块加载顺序

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -42,12 +42,15 @@
 <bind port="6667,6668,6669"
       type="clients">
 <bind port="6697"
-      sslprofile="Clients"
+      sslprofile="Basic"
       type="clients">
 <bind port="8080"
       hook="websocket"
-      sslprofile="Websockets"
+      sslprofile="Basic"
       type="clients">
+<bind port="8081"
+      sslprofile="Basic"
+      type="httpd">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -342,10 +345,10 @@
 <module name="hidemode">
 <module name="hideoper">
 <module name="hostcycle">
-#<module name="httpd">
-#<module name="httpd_acl">
-#<module name="httpd_config">
-#<module name="httpd_stats">
+<module name="httpd">
+<module name="httpd_acl">
+<module name="httpd_config">
+<module name="httpd_stats">
 <module name="ident">
 <module name="inviteexception">
 <module name="ircv3">
