--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -187,6 +187,12 @@
          warnexpiring="1w"
          welcomemsg="no">
 <wsorigin allow="*">
+<httpd timeout="10s">
+<httpdacl path="/*"
+          types="password"
+          username="arkfuture"
+          password="123456789">
+
 
 #-#-#-#-#-#-#-#-#-#额外的模块配置-#-#-#-#-#-#-#-#
 <maxmind file="&ConfPath;CC.mmdb">
@@ -194,20 +200,7 @@
 # 配置SSL(如果让此项生效,需要自行编译和启用SSL模块,如果是安装了官方的安装包,此配置不生效)
 # 请自行参考官方配置后补充配置 对应模块:ssl_openssl 或 ssl_gnutls 和 ircv3_sts
 <gnutls onrehash="yes">
-<sslprofile name="Clients"
-            provider="gnutls"
-            cafile=""
-            certfile="&dir.config;/conf/fullchain.pem"
-            crlfile=""
-            dhfile=""
-            hash="sha3-256"
-            keyfile="&dir.config;/conf/key.pem"
-            mindhbits="1024"
-            outrecsize="2048"
-            priority="NORMAL"
-            requestclientcert="yes"
-            strictpriority="no">
-<sslprofile name="Websockets"
+<sslprofile name="Basic"
             provider="gnutls"
             cafile=""
             certfile="&dir.config;/conf/fullchain.pem"
@@ -224,6 +217,7 @@
      duration="60d"
      port="6697"
      preload="yes">
+
 
 #-#-#-#-#-#-#-#-#-#IRC多服务器桥接/IRC服务框架-#-#-#-#-#-#-#-#
 # 请自行参考官方配置后补充配置 对应模块:spanningtree
