更新端口配置，添加protocols属性以支持所有协议

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -40,8 +40,10 @@
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
 <bind port="6667,6668,6669"
+      protocols="all"
       type="clients">
 <bind port="6697"
+      protocols="all"
       sslprofile="Basic"
       type="clients">
 <bind port="8080"
