添加对管理频道的限制，更新websocket配置以支持原生ping和代理范围

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -178,6 +178,7 @@
          saveperiod="5s"
          backoff="2"
          maxbackoff="5m">
+
 <badchan name="#arkfuture*"
          reason="管理专有频道,请勿使用!"
          allowopers="no">
@@ -187,6 +188,10 @@
          warnexpiring="1w"
          welcomemsg="no">
 <wsorigin allow="*">
+<websocket defaultmode="text"
+           nativeping="yes"
+           proxyranges="">
+<wsorigin allow="">
 <httpd timeout="10s">
 <httpdacl path="/*"
           types="password"
