--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -17,9 +17,9 @@
       runtimedir="&dir.runtime;">
 # <define> 标记允许您定义一个实体(定义服务器变量).此标记可以根据需要定义多次.
 <define name="ConfPath"
-        value="conf/">
+        value="/conf/">
 <define name="TxtPath"
-        value="txt/">
+        value="/txt/">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -178,8 +178,8 @@
          suffixpart="&quot;"
          suffixquit=""
          syntaxhints="yes"
-         xlinemessage="您已被禁止, 请联系管理员"
-         xlinequit="您因 %fulltype% 被限制, 此限制于 %created% 创建, 将持续 %duration%, 预计 %expiry% 到期. 设置者为 %setter%, 原因是：%reason%">
+         xlinemessage="您已被禁止, 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
+         xlinequit="您因 %fulltype% 被限制, 此限制于 %created% 创建, 将持续 %duration%, 预计 %expiry% 到期. 设置者为 %setter%, 原因是：%reason%.  如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息.">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#安全配置#-#-#-#-#-#-#-#-#-#-#-#
@@ -187,8 +187,8 @@
 <security announceinvites="dynamic"
           customversion="ARKFUTURE Config"
           genericoper="no"
-          publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 设置者为 %setter%, 虽无法告知具体原因, 但请知悉系统依规执行. "
-          hidekills="您已经被KILL, 请联系管理员"
+          publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
+          hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
           hideserver="ARKFUTURE-NET"
           hideservicekills="yes"
           maxtargets="20"
@@ -196,7 +196,7 @@
           runasgroup=""
           runasuser=""
           userstats="Pu"
-          maphide="HTTPS://ARKFUTURE.GITHUB.IO/#ARKFUTURE-NET">
+          maphide="HTTPS://ARKFUTURE.GITHUB.IO/#irc">
 
 #<exception>标签定义了服务器永久性例外规则,允许特定主机绕过全局限制.此标记可以根据需要定义多次.
 <exception host="127.0.0.1"
