更新配置文件，修正路径定义以确保正确引用配置和文本目录

--- a/ARKFUTURE/CONFIG/inspircd/norootconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/norootconf/inspircd.conf
@@ -16,9 +16,9 @@
 
 # <define> 标记允许您定义一个实体(定义服务器变量);使用方法:&SSLPath;ca.crt 代替 /etc/inspircd/ssl/ca.crt
 <define name="ConfPath"
-        value="conf/">
+        value="/conf/">
 <define name="TxtPath"
-        value="txt/">
+        value="/txt/">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
