--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -17,9 +17,9 @@
       runtimedir="&dir.runtime;">
 # <define> 标记允许您定义一个实体(定义服务器变量).此标记可以根据需要定义多次.
 <define name="ConfPath"
-        value="/conf/">
+        value="conf/">
 <define name="TxtPath"
-        value="/txt/">
+        value="txt/">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
