更新websocket配置，允许所有来源的wsorigin

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -191,7 +191,7 @@
 <websocket defaultmode="text"
            nativeping="yes"
            proxyranges="">
-<wsorigin allow="">
+<wsorigin allow="*">
 <httpd timeout="10s">
 <httpdacl path="/*"
           types="password"
