更新频道日志配置，将频道名称从#arkfuture_op更改为#arkfuture

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -22,7 +22,7 @@
              maxduration="4w"
              maxlines="50"
              prefixmsg="yes">
-<chanlog channel="#arkfuture_op"
+<chanlog channel="#arkfuture"
          snomasks="cqjknorvwxCQJKNORVWX">
 <channames allowrange=""
            denyrange="">
