--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -238,7 +238,7 @@
 <sqlauth column="passwd"
          kdf="PBKDF2-HMAC-SHA512"
          dbid="auth"
-         killreason="密码错误,如果登录失败次数多请联系管理员"
+         killreason="密码错误,如果登录失败次数多 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取帮助"
          query="SELECT * FROM user WHERE name='$nick' LIMIT 1"
          verbose="no">
 <mkpasswd operonly="no">
