更新配置文件，调整whowas最大保留时间为3天，并修改频道日志配置，将频道名称从#arkfuture_op更改为#arkfuture

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -216,7 +216,7 @@
 #<whowas>标签定义了/WHOWAS数据库的配置.此标记只能定义一次.
 <whowas groupsize="10"
         maxgroups="10000"
-        maxkeep="7d"
+        maxkeep="3d"
         nickupdate="yes">
 
 
@@ -264,7 +264,7 @@
 #<badhost>标签定义了永久K线.此标记可以根据需要定义多次.
 <badhost host="*.example.com" reason="为防止攻击保留">
 
-#<maxlist>标签的定义数量的清单模式，可以建立在一个通道
+#<maxlist>标签的定义数量的清单模式, 可以建立在一个通道
 <maxlist chan="*"
          limit="100000">
 
