--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -19,9 +19,9 @@
       runtimedir="&dir.runtime;">
 # <define> 标记允许您定义一个实体(定义服务器变量);使用方法:&SSLPath;ca.crt 代替 /etc/inspircd/ssl/ca.crt
 <define name="ConfPath"
-        value="&dir.config;/conf/">
+        value="conf/">
 <define name="TxtPath"
-        value="&dir.config;/txt/">
+        value="txt/">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -160,8 +160,8 @@
          suffixpart="&quot;"
          suffixquit=""
          syntaxhints="yes"
-         xlinemessage="您已被禁止, 请联系管理员"
-         xlinequit="您因 %fulltype% 被限制, 此限制于 %created% 创建, 将持续 %duration%, 预计 %expiry% 到期. 设置者为 %setter%, 原因是：%reason%">
+         xlinemessage="您已被禁止, 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
+         xlinequit="您因 %fulltype% 被限制, 此限制于 %created% 创建, 将持续 %duration%, 预计 %expiry% 到期. 设置者为 %setter%, 原因是：%reason%.  如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息.">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#安全配置#-#-#-#-#-#-#-#-#-#-#-#
@@ -169,8 +169,8 @@
 <security announceinvites="dynamic"
           customversion="Public Config"
           genericoper="no"
-          publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 请联系 arkfuture 对此决定进行上诉."
-          hidekills="您已经被KILL, 请联系管理员"
+          publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
+          hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
           hideserver="ARKFUTURE-NET"
           hideservicekills="yes"
           maxtargets="20"
@@ -178,7 +178,7 @@
           runasgroup=""
           runasuser=""
           userstats="Pu"
-          maphide="">
+          maphide="HTTPS://ARKFUTURE.GITHUB.IO/#irc">
 
 #<exception>标签定义了服务器永久性例外规则,允许特定主机绕过全局限制.此标记可以根据需要定义多次.
 <exception host="127.0.0.1"
