--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -22,8 +22,8 @@
              maxduration="4w"
              maxlines="50"
              prefixmsg="yes">
-<chanlog channel="#arkfuture_op"
-         snomasks="cqjknorvwx">
+<chanlog channel="#arkfuture"
+         snomasks="cqjknorvwxCQJKNORVWX">
 <channames allowrange=""
            denyrange="">
 <codepage name="ascii"
