移除不必要的httpd绑定和模块配置，优化websocket设置

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -50,9 +50,6 @@
       hook="websocket"
       sslprofile="Basic"
       type="clients">
-<bind port="8081"
-      sslprofile="Basic"
-      type="httpd">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-连接配置-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -347,10 +344,10 @@
 <module name="hidemode">
 <module name="hideoper">
 <module name="hostcycle">
-<module name="httpd">
-<module name="httpd_acl">
-<module name="httpd_config">
-<module name="httpd_stats">
+#<module name="httpd">
+#<module name="httpd_acl">
+#<module name="httpd_config">
+#<module name="httpd_stats">
 <module name="ident">
 <module name="inviteexception">
 <module name="ircv3">
