--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -45,6 +45,7 @@
 <bind port="6697"
       protocols="all"
       sslprofile="Basic"
+      usests="yes"
       type="clients">
 <bind port="8080"
       hook="websocket"
