更新SSL配置，修改证书文件路径为cert.pem

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -202,7 +202,7 @@
 <sslprofile name="Basic"
             provider="gnutls"
             cafile=""
-            certfile="&dir.config;/conf/fullchain.pem"
+            certfile="&dir.config;/conf/cert.pem"
             crlfile=""
             dhfile=""
             hash="sha3-256"
