更新SSL配置，修改证书和密钥文件路径为ssl目录

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -202,11 +202,11 @@
 <sslprofile name="Basic"
             provider="gnutls"
             cafile=""
-            certfile="&dir.config;/conf/cert.pem"
+            certfile="&ConfPath;ssl/cert.pem"
             crlfile=""
             dhfile=""
             hash="sha3-256"
-            keyfile="&dir.config;/conf/key.pem"
+            keyfile="&ConfPath;ssl/key.pem"
             mindhbits="1024"
             outrecsize="2048"
             priority="NORMAL"
