更新SSL配置，修改密钥文件路径为key.edr

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -206,7 +206,7 @@
             crlfile=""
             dhfile=""
             hash="sha3-256"
-            keyfile="&ConfPath;ssl/key.pem"
+            keyfile="&ConfPath;ssl/key.edr"
             mindhbits="1024"
             outrecsize="2048"
             priority="NORMAL"
