更新SSL配置，将requiressl属性值从"trusted"修改为"yes"，以增强安全性

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -89,7 +89,7 @@
          usecloak="yes"
          useconnectban="no"
          port="6697"
-         requiressl="trusted"
+         requiressl="yes"
          usests="yes">
 
 #标记定义定位克隆时应查看的IP地址位数.此标记只能定义一次.
