--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -32,9 +32,9 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-管理员信息-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次.
-<admin name="arkfuture"
-       description="ARKFUTURE Management Operations Working Group"
-       email="pbp9wdep2@mozmail.com">
+<admin name="Nick: arkfuture"
+       description="From: ARKFUTURE Management Operations Working Group"
+       email="Email: pbp9wdep2@mozmail.com">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
@@ -136,13 +136,13 @@
 # 使用include来加载一个单独的操作员账户配置文件
 #<include file="&ConfPath;opers.conf"> //此配置使用数据库存储操作员信息
 
-
+wget -O - https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
 #<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
-<files motd="&TxtPath;motd.txt"
-       opermotd="&TxtPath;opermotd.txt"
-       quotes="&TxtPath;quotes.txt"
-       rules="&TxtPath;rules.txt">
+<execfiles motd="wget -O - https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/motd.txt"
+           opermotd="wget -O - https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/opermotd.txt"
+           quotes="wget -O - https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/quotes.txt"
+           rules="wget -O - https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/rules.txt">
 
 #<dns>标签定义了在查找主机名时要使用的DNS服务器.此标记只能定义一次.
 <dns enabled="yes"
