--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -34,9 +34,9 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-管理员信息-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次.
-<admin name="arkfuture"
-       description="ARKFUTURE Management Operations Working Group"
-       email="pbp9wdep2@mozmail.com">
+<admin name="Nick: arkfuture"
+       description="From: ARKFUTURE Management Operations Working Group"
+       email="Email: pbp9wdep2@mozmail.com">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
