更新配置文件，替换wget命令为execfiles标签以动态加载MOTD，调整hideserver值以反映正确的服务器名称，修改STS持续时间为30天

--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -171,7 +171,7 @@
           genericoper="no"
           publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
           hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
-          hideserver="ARKFUTURE-NET"
+          hideserver="ARKFUTURE"
           hideservicekills="yes"
           maxtargets="20"
           restrictbannedusers="yes"
