--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -136,7 +136,7 @@
 # 使用include来加载一个单独的操作员账户配置文件
 #<include file="&ConfPath;opers.conf"> //此配置使用数据库存储操作员信息
 
-wget -O - https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/
+
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
 #<files><execfiles>标签读取一个或多个文件.这两个标记只能定义一次.这些文件的用途取决于它们在哪个字段中定义.请注意,文件只在缓存器上读取,因此不会自动检测更改.
 <execfiles motd="wget -O - https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/motd.txt"
@@ -186,7 +186,7 @@ wget -O - https://arkfuture.github.io/ARKFUTURE/CONFIG/inspircd/txt/
           genericoper="no"
           publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
           hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
-          hideserver="ARKFUTURE-NET"
+          hideserver="ARKFUTURE"
           hideservicekills="yes"
           maxtargets="20"
           restrictbannedusers="yes"
