更新配置文件，修改messageflood扩展属性为yes，以启用消息泛滥检测功能

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -97,7 +97,7 @@
            duration="1m"
            splitwait="30s">
 <knock notify="notice">
-<messageflood extended=""
+<messageflood extended="yes"
               message="消息泛滥 (触发了 %lines% 中的消息 %duration%)"
               notice="1.0"
               privmsg="1.0"
