更新配置文件，将密码哈希算法从PBKDF2-HMAC-SHA512更改为bcrypt，以增强安全性

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -71,7 +71,7 @@
          timeout="10"
          uniqueusername="yes"
          password=""
-         hash="pbkdf2-hmac-sha512"
+         hash="bcrypt"
          usecloak="yes"
          useconnectban="no"
          motd="motd">  
