--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -7,7 +7,7 @@
 <auditorium opcansee="no"
             opvisible="no"
             opercansee="yes">
-<bcrypt rounds="10">
+<bcrypt rounds="12">
 <blockamsg delay="5s"
            action="killopers">
 <botmode forcenotice="no">
@@ -118,11 +118,7 @@
              forwardmsg="通知 %nick% :*** 将PASS转发到 %nickrequired%"
              nick="NickServ">
 <mkpasswd operonly="no">
-<pbkdf2 iterations="20480"
-        length="64">
-<pbkdf2prov hash="sha512"
-            iterations="20480"
-            length="64">        
+      
 <permchanneldb filename="&ConfPath;permchannels.conf"
                listmodes="yes"
                operonly="yes"
@@ -230,7 +226,7 @@
 <sqloper dbid="auth"
          query="SELECT name,password,hash,host,type FROM oper WHERE active=1 AND type IS NOT NULL LIMIT 1">
 <sqlauth column="passwd"
-         kdf="PBKDF2-HMAC-SHA512"
+         kdf="bcrypt"
          dbid="auth"
          killreason="密码错误,如果登录失败次数多 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取帮助"
          query="SELECT * FROM user WHERE name='$nick' LIMIT 1"
