更新数据库配置，将auth.sq3的路径从相对路径更改为绝对路径，以确保正确访问

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -222,7 +222,7 @@
 # 请自行参考官方配置后补充配置 对应模块:sqlite3 或 mysql 或 pgsql
 <database module="sqlite"
           id="auth"
-          hostname="&ConfPath;auth.sq3">
+          hostname="&dir.config;conf/auth.sq3">
 <sqloper dbid="auth"
          query="SELECT name,password,hash,host,type FROM oper WHERE active=1 AND type IS NOT NULL LIMIT 1">
 <sqlauth column="passwd"
