--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -10,16 +10,15 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
 # <path> 标记定义了服务器的目录结构.此标记只能定义一次.
-<path configdir="&dir.config;"
-      datadir="&dir.data;"
+<path datadir="&dir.data;"
       logdir="&dir.log;"
       moduledir="&dir.module;"
       runtimedir="&dir.runtime;">
 # <define> 标记允许您定义一个实体(定义服务器变量).此标记可以根据需要定义多次.
 <define name="ConfPath"
-        value="conf/">
+        value="&dir.config;/conf/">
 <define name="TxtPath"
-        value="txt/">
+        value="&dir.config;/conf/">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-服务器描述-#-#-#-#-#-#-#-#-#-#-#-#-#
