--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -12,11 +12,8 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
 # <path> 标记定义了服务器的目录结构.此标记只能定义一次.
-<path configdir="&dir.config;"
-      datadir="&dir.data;"
-      logdir="&dir.log;"
-      moduledir="&dir.module;"
-      runtimedir="&dir.runtime;">
+#<path configdir="&dir.config;">
+
 # <define> 标记允许您定义一个实体(定义服务器变量);使用方法:&SSLPath;ca.crt 代替 /etc/inspircd/ssl/ca.crt
 <define name="ConfPath"
         value="conf/">
