更新README.md和inspircd.conf文件，修复路径配置并移除版本号注释以简化配置

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -1,4 +1,4 @@
-# Inspircd conf ---UTF-8 ---1.8
+# Inspircd conf ---UTF-8
 # 这只是一个基础的配置文件 它可能需要根据您的需求进行调整 此文件为公开的配置文件
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 
@@ -10,7 +10,7 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
 # <path> 标记定义了服务器的目录结构.此标记只能定义一次.
-#<path configdir="&dir.config;">
+<path configdir="&dir.config;">
 
 # <define> 标记允许您定义一个实体(定义服务器变量).此标记可以根据需要定义多次.
 <define name="ConfPath"
