更新README.md，修正插件路径建议为绝对路径以避免文件找不到错误；删除无用的auth.sq3.back、config.sh和inspircd.conf文件，优化配置文件结构

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -198,11 +198,11 @@
 <sslprofile name="Basic"
             provider="gnutls"
             cafile=""
-            certfile="&ConfPath;ssl/cert.pem"
+            certfile="&dir.config;/conf/ssl/cert.pem"
             crlfile=""
             dhfile=""
             hash="sha3-256"
-            keyfile="&ConfPath;ssl/key.pem"
+            keyfile="&dir.config;/conf/ssl/key.pem"
             mindhbits="1024"
             outrecsize="2048"
             priority="NORMAL"
