--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -190,7 +190,7 @@
 
 
 #-#-#-#-#-#-#-#-#-#额外的模块配置-#-#-#-#-#-#-#-#
-<maxmind file="&ConfPath;CC.mmdb">
+<maxmind file="&dir.config;/conf/CC.mmdb">
 
 # 配置SSL(如果让此项生效,需要自行编译和启用SSL模块,如果是安装了官方的安装包,此配置不生效)
 # 请自行参考官方配置后补充配置 对应模块:ssl_openssl 或 ssl_gnutls 和 ircv3_sts
