更新配置文件，调整权限设置并优化频道信息，增强配置灵活性

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -22,7 +22,7 @@
              maxduration="4w"
              maxlines="50"
              prefixmsg="yes">
-<chanlog channel="#arkfuture"
+<chanlog channel="#arkfuture_log"
          snomasks="cqjknorvwxCQJKNORVWX">
 <channames allowrange=""
            denyrange="">
@@ -175,9 +175,6 @@
          backoff="2"
          maxbackoff="5m">
 
-<badchan name="#arkfuture*"
-         reason="管理专有频道,请勿使用!"
-         allowopers="no">
 <sslinfo hash="sha-256"
          localsecure="no"
          operonly="yes"
