优化dccallow配置，允许所有连接并增加最大条目数

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -62,12 +62,10 @@
            period="60s"
            timeout="5m"
            quitmsg="连接受到限制太多尝试">
-<banfile action="allow"
-         pattern="*">
-<dccallow action="block"
+<dccallow action="allow"
           blockchat="yes"
-          length="86400"
-          maxentries="20">
+          length="0"
+          maxentries="100">
 <deaf bypasschars=""
       servicebypasschars=""
       privdeafservice="yes">
