更新管理员信息，简化描述并修正邮箱格式；添加SSL端口配置以支持安全连接

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -29,23 +29,15 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-管理员信息-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<admin>标签定义了服务器管理员的联系方式.此标记只能定义一次.
-<admin name="Nick: arkfuture"
-       description="From: ARKFUTURE Management Operations Working Group"
-       email="Email: pbp9wdep2@mozmail.com">
+<admin name="arkfuture"
+       description="Server Administrator"
+       email="pbp9wdep2@mozmail.com">
 
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
 <bind port="6667,6668,6669"
       protocols="all"
-      type="clients">
-<bind port="6697"
-      protocols="all"
-      sslprofile="Basic"
-      type="clients">
-<bind port="8080"
-      hook="websocket"
-      sslprofile="Basic"
       type="clients">
 
 
