--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -190,19 +190,19 @@
 # 配置SSL(如果让此项生效,需要自行编译和启用SSL模块,如果是安装了官方的安装包,此配置不生效)
 # 请自行参考官方配置后补充配置 对应模块:ssl_openssl 或 ssl_gnutls 和 ircv3_sts
 <gnutls onrehash="yes">
+<bind port="6697"
+      protocols="all"
+      sslprofile="Basic"
+      type="clients">
+<bind port="8080"
+      hook="websocket"
+      sslprofile="Basic"
+      type="clients">
 <sslprofile name="Basic"
             provider="gnutls"
-            cafile=""
             certfile="&dir.config;/conf/ssl/cert.pem"
-            crlfile=""
-            dhfile=""
-            hash="sha3-256"
             keyfile="&dir.config;/conf/ssl/key.pem"
-            mindhbits="1024"
-            outrecsize="2048"
-            priority="NORMAL"
-            requestclientcert="yes"
-            strictpriority="no">
+            priority="NORMAL">
 <sts host="*"
      duration="30d"
      port="6697"
