调整连接洪水控制配置，缩短等待时间并减少最大连接数，以增强系统安全性

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -57,11 +57,11 @@
             ipv6cidr="128"
             bootwait="7m"
             splitwait="7m">
-<connflood bootwait="10m"
-           maxconns="10"
-           period="60s"
+<connflood bootwait="1m"
+           maxconns="3"
+           period="30s"
            timeout="5m"
-           quitmsg="连接受到限制太多尝试">
+           quitmsg="连接受到限制:太多尝试,请5分钟后再试(防止ddos)">
 <dccallow action="allow"
           blockchat="yes"
           length="0"
