更新连接配置，启用连接禁用功能并调整连接频率限制，增强系统安全性

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/modulesconf.conf
@@ -51,12 +51,12 @@
 <waitpong killonbadreply="no"
           sendsnotice="no">
 <connectban threshold="20"
-            banmessage="您的IP范围在太短的时间内尝试连接太多次.稍等片刻,您将能够连接."
-            banduration="1m"
+            banmessage="您的IP范围在太短的时间内尝试连接太多次(频率过高).稍等片刻,您将能够连接."
+            banduration="2h"
             ipv4cidr="32"
-            ipv6cidr="128"
-            bootwait="7m"
-            splitwait="7m">
+            ipv6cidr="64"
+            bootwait="5m"
+            splitwait="3m">
 <connflood bootwait="1m"
            maxconns="3"
            period="30s"
