--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -62,14 +62,13 @@
          password=""
          hash="bcrypt"
          usecloak="yes"
-         useconnectban="no"
          motd="motd">  
 
 <connect name="Basic"
          parent="Main"
          allow="*"
          usecloak="yes"
-         useconnectban="no"
+         useconnectban="yes"
          port="6667,6668,6669">
 
 <connect name="Secure"
