更新配置文件，移除不再使用的操作员账户配置，调整性能参数以优化服务器性能

--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -122,7 +122,7 @@
 
 #<oper>标签定义了一个服务器操作员帐户.此标记可以根据需要定义多次.
 # 使用include来加载一个单独的操作员账户配置文件
-#<include file="&ConfPath;opers.conf"> //此配置使用数据库存储操作员信息
+#<include file="&ConfPath;opers.conf"> //此项配置已经使用数据库模块代替 故不导入opers.conf文件
 
 
 #-#-#-#-#-#-#-#-#-#-杂项配置-#-#-#-#-#-#-#-#-#-#
@@ -191,9 +191,9 @@
 #-#-#-#-#-#-#-#-#-#-#-#性能配置#-#-#-#-#-#-#-#-#-#-#
 #<performance>标签定义了与服务器性能相关的配置选项.此标记只能定义一次.
 <performance clonesonconnect="yes" 
-             netbuffersize="" 
-             softlimit="" 
-             somaxconn="" 
+             netbuffersize="65536" 
+             softlimit="65536" 
+             somaxconn="65536" 
              timeskipwarn="2s"> 
 
 
