--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -12,9 +12,9 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-定义-#-#-#-#-#-#-#-#-#-#-#-#-#
 # <path> 标记定义了服务器的目录结构.此标记只能定义一次.
-#<path configdir="&dir.config;">
+<path configdir="&dir.config;">
 
-# <define> 标记允许您定义一个实体(定义服务器变量);使用方法:&SSLPath;ca.crt 代替 /etc/inspircd/ssl/ca.crt
+# <define> 标记允许您定义一个实体(定义服务器变量).此标记可以根据需要定义多次.
 <define name="ConfPath"
         value="conf/">
 <define name="TxtPath"
@@ -38,8 +38,8 @@
 
 #-#-#-#-#-#-#-#-#-#-#-#-端口配置-#-#-#-#-#-#-#-#-#-#-#-#-#
 #<bind>标签定义了一个监听连接的端点.这个标签可以根据需要定义多次.
-<bind address="*"
-      port="6667,6668,6669"
+<bind port="6667,6668,6669"
+      protocols="all"
       type="clients">
 
 
@@ -64,14 +64,13 @@
          password=""
          hash="bcrypt"
          usecloak="yes"
-         useconnectban="no"
          motd="motd">  
 
 <connect name="Basic"
          parent="Main"
          allow="*"
          usecloak="yes"
-         useconnectban="no"
+         useconnectban="yes"
          port="6667,6668,6669">
 
 #标记定义定位克隆时应查看的IP地址位数.此标记只能定义一次.
@@ -164,7 +163,7 @@
 #-#-#-#-#-#-#-#-#-#-#-#安全配置#-#-#-#-#-#-#-#-#-#-#-#
 #<security>标签定义了与服务器安全相关的配置选项.此标记只能定义一次.
 <security announceinvites="dynamic"
-          customversion="Public Config"
+          customversion="Basic Config"
           genericoper="no"
           publicxlinequit="很遗憾, 你因匹配到 %fulltype% 而离开. 此 %type% 于 %created% 创建, 持续时间为 %duration%, 将于 %expiry% 过期, 目前还剩 %remaining% 时间. 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
           hidekills="您已经被KILL, 如获取帮助 请发匿名邮件并带上您的Nick到 pbp9wdep2@mozmail.com 获取详细信息."
@@ -186,8 +185,8 @@
 #<performance>标签定义了与服务器性能相关的配置选项.此标记只能定义一次.
 <performance clonesonconnect="yes" 
              netbuffersize="65536" 
-             softlimit="65535" 
-             somaxconn="65535" 
+             softlimit="65536" 
+             somaxconn="65536" 
              timeskipwarn="2s"> 
 
 
