--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -191,9 +191,9 @@
 #-#-#-#-#-#-#-#-#-#-#-#性能配置#-#-#-#-#-#-#-#-#-#-#
 #<performance>标签定义了与服务器性能相关的配置选项.此标记只能定义一次.
 <performance clonesonconnect="yes" 
-             netbuffersize="65536" 
-             softlimit="65536" 
-             somaxconn="65536" 
+             netbuffersize="" 
+             softlimit="" 
+             somaxconn="" 
              timeskipwarn="2s"> 
 
 
