更新配置文件，添加安全配置说明以增强安全性

--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -1,4 +1,4 @@
-# Inspircd conf ---UTF-8
+# Inspircd conf ---UTF-8 ---Security configuration
 # 这只是一个基础的配置文件 它可能需要根据您的需求进行调整 此文件为公开的配置文件 请按需要修改为自己的
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 # !!!!此配置文件中所有的密码均为随机生成,不作为固定密码使用,请注意修改密码,才能使用到生产环境中
