更新配置文件，调整bcrypt轮数、连接限制和消息泛滥设置，以增强安全性和性能

--- a/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/modulesconf.conf
@@ -7,7 +7,7 @@
 <auditorium opcansee="no"
             opvisible="no"
             opercansee="yes">
-<bcrypt rounds="10">
+<bcrypt rounds="12">
 <blockamsg delay="5s"
            action="killopers">
 <botmode forcenotice="no">
@@ -22,7 +22,7 @@
              maxduration="4w"
              maxlines="50"
              prefixmsg="yes">
-<chanlog channel="#arkfuture"
+<chanlog channel="#arkfuture_log"
          snomasks="cqjknorvwxCQJKNORVWX">
 <channames allowrange=""
            denyrange="">
@@ -51,17 +51,17 @@
 <waitpong killonbadreply="no"
           sendsnotice="no">
 <connectban threshold="20"
-            banmessage="您的IP范围在太短的时间内尝试连接太多次.稍等片刻,您将能够连接."
-            banduration="1m"
+            banmessage="您的IP范围在太短的时间内尝试连接太多次(频率过高).稍等片刻,您将能够连接."
+            banduration="2h"
             ipv4cidr="32"
-            ipv6cidr="128"
-            bootwait="7m"
-            splitwait="7m">
-<connflood bootwait="10m"
-           maxconns="10"
-           period="60s"
+            ipv6cidr="64"
+            bootwait="5m"
+            splitwait="3m">
+<connflood bootwait="1m"
+           maxconns="3"
+           period="30s"
            timeout="5m"
-           quitmsg="连接受到限制太多尝试">
+           quitmsg="连接受到限制:太多尝试,请5分钟后再试(防止ddos)">
 <dccallow action="allow"
           blockchat="yes"
           length="0"
@@ -95,7 +95,7 @@
            duration="1m"
            splitwait="30s">
 <knock notify="notice">
-<messageflood extended=""
+<messageflood extended="yes"
               message="消息泛滥 (触发了 %lines% 中的消息 %duration%)"
               notice="1.0"
               privmsg="1.0"
@@ -116,11 +116,7 @@
              forwardmsg="通知 %nick% :*** 将PASS转发到 %nickrequired%"
              nick="NickServ">
 <mkpasswd operonly="no">
-<pbkdf2 iterations="20480"
-        length="64">
-<pbkdf2prov hash="sha512"
-            iterations="20480"
-            length="64"> 
+      
 <permchanneldb filename="&ConfPath;permchannels.conf"
                listmodes="yes"
                operonly="yes"
