--- a/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/afeconf/inspircd.conf
@@ -1,5 +1,5 @@
 # Inspircd conf ---UTF-8 ---Security configuration
-# 这只是一个基础的配置文件 它可能需要根据您的需求进行调整 此文件为公开的配置文件
+# 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
 
 # 您可以在以下文档中查询详细配置来完善此配置,我们的配置基于官方文档
