--- a/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
+++ b/ARKFUTURE/CONFIG/inspircd/conf/inspircd.conf
@@ -1,7 +1,6 @@
 # Inspircd conf ---UTF-8 ---Security configuration
-# 这只是一个基础的配置文件 它可能需要根据您的需求进行调整 此文件为公开的配置文件 请按需要修改为自己的
+# 这只是一个基础的配置文件 它可能需要根据您的需求进行调整
 # !!!!此文件已经经过实际测试,可以使用最新版本正常运行!!!!
-# !!!!此配置文件中所有的密码均为随机生成,不作为固定密码使用,请注意修改密码,才能使用到生产环境中
 # !!!!预编译模块需要[自行编译安装]或者[使用我们已编译好的全模块软件包]后才可以使用,否则将会报错,这也是我们注释掉第三方模块的原因
 
 # 您可以在以下文档中查询详细配置来完善此配置,我们的配置基于官方文档
